--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: Vendia
 Author: Moshtafizur
 Author URI: https://www.linkedin.com/in/moshtafizur/
-Description: Complete WooCommerce WordPress theme
+Description: Modern WooCommerce WordPress theme with a clean homepage, customizer-based layout control, and full WooCommerce integration.
 Version: 1.0.3
 License: GPL v2 or later
 License URI: https://www.gnu.org/licenses/gpl-2.0.html
